--- a/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/translations/Messages_de_DE.json
@@ -12,7 +12,7 @@
   "pci_projects_project_storages_volume_backup_create_step_2_description_part_1": "Führen Sie regelmäßige Backups durch",
   "pci_projects_project_storages_volume_backup_create_step_2_description_part_2": "Nutzen Sie einen Backup-Dienst ganz nach Ihren Anforderungen.",
   "pci_projects_project_storages_volume_backup_create_step_2_description_link": "Mehr über Backups erfahren",
-  "pci_projects_project_storages_volume_backup_create_step_2_option_price": "Preis: {{ priceValue }} zzgl. MwSt./GB/Stunde",
+  "pci_projects_project_storages_volume_backup_create_step_2_option_price": "Preis: {{ priceValue }} zzgl. MwSt./GB/Monat",
   "pci_projects_project_storages_volume_backup_create_step_2_option_volume_backup_label": "Volume Backup",
   "pci_projects_project_storages_volume_backup_create_step_2_option_volume_backup_description_part_1": "Verringern Sie die Auswirkungen eines unerwünschten Datenverlusts Ihrer Anwendungsdaten.",
   "pci_projects_project_storages_volume_backup_create_step_2_option_volume_backup_description_part_2": "Das Backup wird auf einem anderen Cluster (Object Storage), aber am selben Standort wie Ihr Volume gespeichert.",
