--- a/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/translations/Messages_it_IT.json
@@ -12,7 +12,7 @@
   "pci_projects_project_storages_volume_backup_create_step_2_description_part_1": "Effettua backup regolari",
   "pci_projects_project_storages_volume_backup_create_step_2_description_part_2": "Approfitta di un servizio di backup adatto alle tue necessità.",
   "pci_projects_project_storages_volume_backup_create_step_2_description_link": "Per saperne di più sui backup",
-  "pci_projects_project_storages_volume_backup_create_step_2_option_price": "Prezzo: {{ priceValue }} +IVA/GB/ora",
+  "pci_projects_project_storages_volume_backup_create_step_2_option_price": "Prezzo: {{ priceValue }} +IVA/GB/mese",
   "pci_projects_project_storages_volume_backup_create_step_2_option_volume_backup_label": "Volume Backup",
   "pci_projects_project_storages_volume_backup_create_step_2_option_volume_backup_description_part_1": "Limita l'impatto di una perdita indesiderata dei dati applicativi.",
   "pci_projects_project_storages_volume_backup_create_step_2_option_volume_backup_description_part_2": "Il backup è archiviato in un cluster differente (Object Storage) ma nella stessa localizzazione del volume.",
