--- a/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/translations/Messages_pl_PL.json
@@ -12,7 +12,7 @@
   "pci_projects_project_storages_volume_backup_create_step_2_description_part_1": "Wykonuj regularne kopie zapasowe",
   "pci_projects_project_storages_volume_backup_create_step_2_description_part_2": "Korzystaj z usługi tworzenia kopii zapasowych zgodnie z Twoimi potrzebami.",
   "pci_projects_project_storages_volume_backup_create_step_2_description_link": "Więcej informacji na temat kopii zapasowych",
-  "pci_projects_project_storages_volume_backup_create_step_2_option_price": "Cena: {{priceValue}} netto/GB/godz.",
+  "pci_projects_project_storages_volume_backup_create_step_2_option_price": "Cena: {{priceValue}} netto/GB/m-c",
   "pci_projects_project_storages_volume_backup_create_step_2_option_volume_backup_label": "Volume Backup",
   "pci_projects_project_storages_volume_backup_create_step_2_option_volume_backup_description_part_1": "Ogranicz skutki niepożądanej utraty danych aplikacji.",
   "pci_projects_project_storages_volume_backup_create_step_2_option_volume_backup_description_part_2": "Backup jest przechowywany w innym klastrze (Object Storage), ale w tej samej lokalizacji co wolumen.",
