--- a/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/translations/Messages_pt_PT.json
@@ -12,7 +12,7 @@
   "pci_projects_project_storages_volume_backup_create_step_2_description_part_1": "Efetue backups regulares",
   "pci_projects_project_storages_volume_backup_create_step_2_description_part_2": "Usufrua de um serviço de backup conforme as suas necessidades.",
   "pci_projects_project_storages_volume_backup_create_step_2_description_link": "Para saber mais sobre os backups",
-  "pci_projects_project_storages_volume_backup_create_step_2_option_price": "Preço: {{ priceValue }}/GB/hora + IVA",
+  "pci_projects_project_storages_volume_backup_create_step_2_option_price": "Preço: {{ priceValue }}/GB/mês + IVA",
   "pci_projects_project_storages_volume_backup_create_step_2_option_volume_backup_label": "Volume Backup",
   "pci_projects_project_storages_volume_backup_create_step_2_option_volume_backup_description_part_1": "Limite o impacto de uma perda de dados indesejada.",
   "pci_projects_project_storages_volume_backup_create_step_2_option_volume_backup_description_part_2": "O backup é armazenado num cluster diferente (Object Storage), mas na mesma localização que o seu volume.",
