--- a/packages/manager/apps/telecom/src/app/telecom/pack/xdsl/modem/wifi/config/translations/Messages_es_ES.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/xdsl/modem/wifi/config/translations/Messages_es_ES.json
@@ -43,5 +43,7 @@
   "xdsl_modem_wifi_WPAandWPA2": "WPA y WPA2",
   "xdsl_modem_wifi_read_error": "¡Vaya! No hemos podido cargar los datos de su wifi.",
   "xdsl_modem_wifi_write_error": "¡Vaya! No hemos podido actualizar su wifi.",
-  "xdsl_modem_wifi_config_info": "Une modification de configuration d'un réseau Wi-Fi est déjà en cours. Les modifications que vous allez apporter seront appliquées une fois cette modification terminée."
+  "xdsl_modem_wifi_config_info": "Une modification de configuration d'un réseau Wi-Fi est déjà en cours. Les modifications que vous allez apporter seront appliquées une fois cette modification terminée.",
+  "xdsl_modem_wifi_WPA2andWPA3": "WPA2 y WPA3",
+  "xdsl_modem_wifi_WPA3": "WPA3"
 }
