--- a/packages/manager/apps/telecom/src/app/telecom/pack/xdsl/modem/wifi/config/translations/Messages_fr_CA.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/xdsl/modem/wifi/config/translations/Messages_fr_CA.json
@@ -37,11 +37,10 @@
   "xdsl_modem_wifi_config_success_single": "Configuration Wi-Fi mis à jour avec succès ! Vous allez être redirigé(e).",
   "xdsl_modem_wifi_config_error_missing": "Wi-Fi non existant!",
   "xdsl_modem_wifi_None": "Aucune",
-  "xdsl_modem_wifi_WEP": "WEP",
-  "xdsl_modem_wifi_WPA": "WPA",
   "xdsl_modem_wifi_WPA2": "WPA2",
-  "xdsl_modem_wifi_WPAandWPA2": "WPA et WPA2",
   "xdsl_modem_wifi_read_error": "Oups ! Nous n'avons pas pu récupérer les informations relatives à votre wifi.",
   "xdsl_modem_wifi_write_error": "Oups ! Nous n'avons pas pu mettre à jour votre wifi.",
-  "xdsl_modem_wifi_config_info": "Une modification de configuration d'un réseau Wi-Fi est déjà en cours. Les modifications que vous allez apporter seront appliquées une fois cette modification terminée."
+  "xdsl_modem_wifi_config_info": "Une modification de configuration d'un réseau Wi-Fi est déjà en cours. Les modifications que vous allez apporter seront appliquées une fois cette modification terminée.",
+  "xdsl_modem_wifi_WPA2andWPA3": "WPA2 et WPA3",
+  "xdsl_modem_wifi_WPA3": "WPA3"
 }
