--- a/packages/manager/apps/telecom/src/app/telecom/pack/xdsl/modem/wifi/config/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/xdsl/modem/wifi/config/translations/Messages_pl_PL.json
@@ -43,5 +43,7 @@
   "xdsl_modem_wifi_WPAandWPA2": "WPA et WPA2",
   "xdsl_modem_wifi_read_error": "Oups ! Nous n'avons pas pu récupérer les informations relatives à votre wifi.",
   "xdsl_modem_wifi_write_error": "Oups ! Nous n'avons pas pu mettre à jour votre wifi.",
-  "xdsl_modem_wifi_config_info": "Une modification de configuration d'un réseau Wi-Fi est déjà en cours. Les modifications que vous allez apporter seront appliquées une fois cette modification terminée."
+  "xdsl_modem_wifi_config_info": "Une modification de configuration d'un réseau Wi-Fi est déjà en cours. Les modifications que vous allez apporter seront appliquées une fois cette modification terminée.",
+  "xdsl_modem_wifi_WPA2andWPA3": "WPA2 i WPA3",
+  "xdsl_modem_wifi_WPA3": "WPA3"
 }
