--- a/packages/manager/apps/dedicated/client/app/account/identity-documents/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/dedicated/client/app/account/identity-documents/translations/Messages_fr_FR.json
@@ -1,7 +1,7 @@
 {
   "user_account_identity_documents": "Mes documents d'identité",
   "user_account_identity_documents_sub_title": "Déposez vos documents",
-  "user_account_identity_documents_intro": "Vous avez souhaité créer votre compte ou faire une commande depuis notre site Indien. La règlementation en vigueur nécessite une vérification de votre identité avant tout commande.",
+  "user_account_identity_documents_intro": "Vous avez créé votre compte et vous souhaitez faire une commande depuis notre site Indien. La règlementation en vigueur nécessite une vérification de votre identité avant toute commande.",
   "user_account_identity_documents_list_for_particular": "Vous êtes un particulier, les documents obligatoires à fournir sont Carte d'identité ou passeport (ou permis de conduire, carte électorale, preuve de possession d'un nombre Aadhaar), Justificatif de domicile.",
   "user_account_identity_documents_list_for_enterprise": "Vous êtes une entreprise, les documents obligatoires à fournir sont Carte d'identité ou passeport (ou permis de conduire, carte électorale, preuve de possession d'un nombre Aadhaar), Justificatif de domicile, Certificat GST.",
   "user_account_identity_documents_list_for_association": "Vous êtes une association, les documents obligatoires à fournir sont Carte d'identité ou passeport (ou permis de conduire, carte électorale, preuve de possession d'un nombre Aadhaar), Justificatif de domicile, Certificat GST (optionnel).",
