--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-review/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-review/translations/Messages_fr_FR.json
@@ -1,9 +1,10 @@
 {
   "pci_app_add_review": "Configuration de votre app",
   "pci_app_add_review_region": "Région",
-  "pci_app_add_review_price_partner": "Prix de la licence {{ partner }}",
+  "pci_app_add_review_image": "Image",
+  "pci_app_add_review_price_partner": "Prix de la licence partenaire {{ partner }}",
   "pci_app_add_review_price_partner_free": "Offerte par {{ partner }}",
-  "pci_app_add_review_price_resource": "Prix des ressources selectionnées",
+  "pci_app_add_review_price_resource": "Prix des ressources sélectionnées",
   "pci_app_add_review_price_resource_free": "Ressource·s offerte·s par OVHcloud pendant la beta",
   "pci_app_add_review_scaling": "Dimensionnement",
   "pci_app_add_review_scaling_static": "Dimensionnement fixe",
@@ -15,6 +16,6 @@
   "pci_app_add_review_scaling_trigger_resource_threshold": "Seuil de déclenchement :",
   "pci_app_add_review_price_total": "Prix total",
   "pci_app_add_review_price_info": "{{ price }} HT /heure",
-  "pci_app_add_review_resources": "Modèle et nombre de réplica(s) choisis",
+  "pci_app_add_review_resources": "Modèle et nombre de ressources par réplica",
   "pci_app_add_review_probe": "Sonde de disponibilité"
 }
