--- a/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_pl_PL.json
@@ -1126,5 +1126,6 @@
   "server_nutanix_cluster_node_warning_2": "Zalecamy przeprowadzenie wszystkich zmian konfiguracji bezpośrednio na dashboardzie serwera powiązanego z klastrem Nutanix: {{clusterNodeDashboardLink}}",
   "server_nutanix_cluster_node_warning_3": "Wszystkie operacje płatnicze związane z tym serwerem są widoczne w klastrze Nutanix: {{clusterDashboardLink}}",
   "server_rtm_eol_info": "Ważna informacja dotycząca usługi Real Time Monitoring - usługa będzie działać do 30 czerwca 2022. Po tym terminie wstrzymamy wyświetlanie danych dotyczących zużycia. Nie będzie to miało wpływu na działanie serwera.",
-  "server_configuration_installation_NONE": "Brak"
+  "server_configuration_installation_NONE": "Brak",
+  "server_configuration_installation_ovh_step2_type_disk_warning_windows": "Nawet jeśli wybrana macierz dyskowa zawiera {{t0}} dysków, wybrany system operacyjny można zainstalować na maksymalnie 2 dyskach"
 }
