--- a/packages/manager/apps/dedicated/client/app/license/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/dedicated/client/app/license/translations/Messages_pt_PT.json
@@ -1313,5 +1313,6 @@
   "license_designation_SQLSERVER_version_sql-server-2016-license-web-edition-14-cores": "SQL Server 2016 license - Web edition - 14 cores",
   "license_designation_WINDOWS_version_WINDOWS_SERVER_2008_WEB_EDITION_4_CPU": "Windows Server 2008 license - Web edition - 4 CPU",
   "license_designation_CPANEL_solo_option": "1 conta cPanel",
-  "license_designation_CPANEL_plus_option": "31-50 contas cPanel"
+  "license_designation_CPANEL_plus_option": "31-50 contas cPanel",
+  "license_dashboard_table_title_name": "Nome"
 }
