--- a/packages/manager/modules/vps/src/dashboard/tile/configuration/translations/Messages_it_IT.json
+++ b/packages/manager/modules/vps/src/dashboard/tile/configuration/translations/Messages_it_IT.json
@@ -18,5 +18,6 @@
   "vps_dashboard_tile_configuration_storage_add_upscale_elite": "Fai evolvere il tuo VPS aumentando lo storage disponibile",
   "vps_dashboard_tile_configuration_upgrade_wrong_nic_cpu": "Per usufruire di più vCore, contatta l’amministratore dell’account: {{ nichandle }}",
   "vps_dashboard_tile_configuration_upgrade_wrong_nic_memory": "Per usufruire di più memoria, contatta l’amministratore dell’account: {{ nichandle }}",
-  "vps_dashboard_tile_configuration_upgrade_wrong_nic_storage": "Per usufruire di più storage, contatta l’amministratore dell’account: {{ nichandle }}"
+  "vps_dashboard_tile_configuration_upgrade_wrong_nic_storage": "Per usufruire di più storage, contatta l’amministratore dell’account: {{ nichandle }}",
+  "vps_dashboard_tile_configuration_starter_range_info_message": "La funzionalità che permette di aumentare la RAM o lo storage è disponibile a partire dalla soluzione VPS Value."
 }
