--- a/packages/manager/modules/vps/src/dashboard/translations/Messages_fr_CA.json
+++ b/packages/manager/modules/vps/src/dashboard/translations/Messages_fr_CA.json
@@ -8,6 +8,9 @@
   "vps_dashboard_migration_in_error": "Une erreur s'est produite lors de la migration de votre VPS. La suite de la migration va être prise en charge par nos équipes.",
   "vps_dashboard_migration_link": "Migrer vers la nouvelle gamme",
   "vps_dashboard_migration_tile": "Migrer mon VPS",
+  "vps_dashboard_starter_range_info_message_1": "Passez à la vitesse supérieure avec les fonctionnalités accessibles à partir de la gamme Value : sauvegarde automatique, licences Plesk, cPanel et Windows, ajout de ressources, stockage SSD NVMe.",
+  "vps_dashboard_starter_range_info_message_2": "Comparez nos autres offres VPS.",
+  "vps_dashboard_automatic_backup_starter_range_info_message": "L'option de sauvegarde automatique n'est disponible qu'à partir de l'offre Value. Pour en bénéficier, vous devez upgrader votre VPS vers une offre supérieure.",
   "vps_dashboard_state": "Statut",
   "vps_dashboard_state_backuping": "En cours de sauvegarde",
   "vps_dashboard_state_installing": "En cours d'installation",
