--- a/packages/manager/modules/vps/src/dashboard/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/vps/src/dashboard/translations/Messages_pt_PT.json
@@ -18,5 +18,8 @@
   "vps_dashboard_state_upgrading": "Alteração da oferta em curso",
   "vps_dashboard_auto_migration_warning_new": "O seu VPS {{vps}} é elegível para a migração com um clique para a nova gama.",
   "vps_dashboard_state_rescued": "Em modo Rescue",
-  "vps_dashboard_migration_tile": "Migrar o meu VPS"
+  "vps_dashboard_migration_tile": "Migrar o meu VPS",
+  "vps_dashboard_starter_range_info_message_1": "Passe à velocidade superior graças às funcionalidades acessíveis a partir da gama Value: backup automático, licenças Plesk, cPanel e Windows, adição de recursos, armazenamento SSD NVMe.",
+  "vps_dashboard_starter_range_info_message_2": "Compare as nossas outras ofertas VPS.",
+  "vps_dashboard_automatic_backup_starter_range_info_message": "A opção de backup automático só está disponível a partir da oferta Value. Para beneficiar dela, deve fazer o upgrade do VPS para uma oferta superior."
 }
