--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_fr_FR.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_fr_FR.json
@@ -136,6 +136,7 @@
   "sidebar_account_profile": "Mon profil",
   "sidebar_account_contacts": "Mes contacts",
   "sidebar_account_iam": "Identités et accès (IAM)",
+  "sidebar_carbon_footprint": "Mon empreinte carbone",
   "sidebar_billing_services": "Mes services",
   "sidebar_billing_ssh": "Mes clés SSH",
   "sidebar_billing_bills": "Mes factures",
