--- a/packages/manager/modules/pci/src/projects/project/private-registry/translations/Messages_fr_CA.json
+++ b/packages/manager/modules/pci/src/projects/project/private-registry/translations/Messages_fr_CA.json
@@ -7,6 +7,7 @@
   "private_registry_create_registry": "Créer un registre privé",
   "private_registry_name": "Nom du Registre",
   "private_registry_id": "ID",
+  "private_registry_region": "Région",
   "private_registry_plan": "Plan",
   "private_registry_harbor_version": "Version d'Harbor",
   "private_registry_status": "État",
