--- a/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_fr_FR.json
@@ -613,6 +613,7 @@
   "server_configuration_installation_ovh_fail_os": "Une erreur s'est produite lors de la récupération des distributions disponible pour le serveur {{t0}}",
   "server_configuration_installation_ovh_fail_partition_schemes": "Une erreur s'est produite lors de la récupération des schémas de partition pour le serveur {{t0}}",
   "server_configuration_installation_ovh_beta": "Beta",
+  "server_configuration_installation_ovh_desktop_BACKUP": "Sauvegarde",
   "server_configuration_installation_ovh_desktop_BASIC": "Basique",
   "server_configuration_installation_ovh_desktop_CUSTOMER": "Personnalisé",
   "server_configuration_installation_ovh_desktop_DATABASE": "Base de données",
