fix(generator): add template dashboard listing onboarding
ref: MANAGER-11537

Signed-off-by: Alex Boungnaseng <alex.boungnaseng.ext@corp.ovh.com>

--- a/packages/manager/core/generator/app/templates/src/public/translations/{{appName}}/Messages_fr_FR.json
+++ b/packages/manager/core/generator/app/templates/src/public/translations/{{appName}}/Messages_fr_FR.json
@@ -1,4 +1,6 @@
 {
   "title": "Bienvenue uapp",
-  "crumb": "Accueil"
+  "crumb": "{{appName}}",
+  "tabs_2": "Tabs 2",
+  "onboarding": "Onboarding"
 }
