--- a/packages/manager/modules/pci/src/projects/new/components/voucher/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/new/components/voucher/translations/Messages_fr_FR.json
@@ -5,10 +5,11 @@
   "pci_projects_new_voucher_form_field_placeholder": "Code promo",
   "pci_projects_new_voucher_form_field_amount": "Montant crédité : {{ amount }}",
   "pci_projects_new_voucher_form_field_add_success": "Félicitations ! Vous recevez {{ credit }} de crédits",
-  "pci_projects_new_voucher_form_field_error_voucher_invalid": "Le code saisi est incorrect.",
-  "pci_projects_new_voucher_form_field_error_voucher_too_many_attempt": "Vous avez saisi des codes promotionnels erronés, veuillez réessayer plus tard.",
+  "pci_projects_new_voucher_form_field_error_voucher_invalid": "Le code que vous avez saisi est erroné. Veuillez réessayer.",
+  "pci_projects_new_voucher_form_field_error_voucher_too_many_attempt": "Vous avez tenté d'ajouter un code de trop nombreuses fois. Merci d'attendre 1 heure avant de réessayer d'ajouter un code.",
   "pci_projects_new_voucher_form_field_error_voucher_no_longer_valid": "Le code saisi n'est plus valide.",
   "pci_projects_new_voucher_form_field_error_voucher_already_used": "Le code que vous avez saisi a déjà été utilisé.",
+  "pci_projects_new_voucher_form_field_error_voucher_already_used_2": "Vous avez déjà utilisé un autre code qui n'est pas compatible avec celui-ci.",
   "pci_projects_new_voucher_form_field_error_voucher_expired": " Le code que vous avez saisi n'est plus valide.",
   "pci_projects_new_voucher_form_field_error_voucher_country": "Le code que vous avez saisi n'est pas disponible pour ce pays.",
   "pci_projects_new_voucher_form_field_error_voucher_payment_mean": " Vous devez renseigner un moyen de paiement afin de pouvoir utiliser ce code.",
