--- a/packages/manager/apps/dedicated/client/app/ip/translations/Messages_fr_CA.json
+++ b/packages/manager/apps/dedicated/client/app/ip/translations/Messages_fr_CA.json
@@ -1,6 +1,6 @@
 {
   "module_ip_dashboard_title": "Gérer les IPs",
-  "module_ip_dashboard_order_IP_action_label": "Commander une IP",
+  "module_ip_dashboard_order_IP_action_label": "Commander des IPs",
   "ip_dashboard_error": "Une erreur est survenue lors du chargement de vos informations.",
   "ip_services_error": "Une erreur est survenue lors du chargement de ces services : {{t0}}. Veuillez réessayer plus tard.",
   "ip_block_error": "Une erreur est survenue lors du chargement des informations de {{t0}}.",
