fix(i18n): add missing translations [CDS 2327]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_en_GB.json
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_en_GB.json
@@ -319,8 +319,8 @@
   "server_configuration_monitoring_update_modal_update_proactive_request_success": "Interventions are enabled on the {{serverName}} server.",
   "server_configuration_monitoring_update_modal_update_no-proactive_request_success": "Interventions are disabled on the {{serverName}} server.",
   "server_configuration_monitoring_update_modal_update_request_failed": "An error has occurred changing the monitoring option.",
-  "server_configuration_distribution": "Last operating system (OS) installed by OVHcloud",
-  "server_configuration_distribution_none": "Not installed",
+  "server_configuration_distribution": "Operating system (OS)",
+  "server_configuration_distribution_none": "There is no operating system installed on your server",
   "server_configuration_distribution_byoi": "BringYourOwnImage",
   "server_configuration_boot": "Boot",
   "server_configuration_datacenter": "Datacenter",
