feat(pci.ai): removed home and registry tabs for ai training
datatr-253

Signed-off-by: Arthur Bullet <arthur.bullet@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/training/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/training/translations/Messages_en_GB.json
@@ -30,6 +30,7 @@
   "pci_projects_project_training_jobs_info": "Details",
   "pci_projects_project_training_jobs_kill": "Stop",
   "pci_projects_project_training_jobs_price": "Price",
+  "pci_projects_project_training_jobs_resubmit": "Relaunch",
   "pci_projects_project_training_jobs_price_estimate": "Estimated job execution time",
   "pci_projects_project_training_jobs_state_TIMEOUT": "Timeout",
   "pci_projects_project_training_discord": "OVHcloud AI Community Discord"
