--- a/packages/manager/modules/pci/src/projects/project/training/translations/Messages_fr_CA.json
+++ b/packages/manager/modules/pci/src/projects/project/training/translations/Messages_fr_CA.json
@@ -35,5 +35,6 @@
   "pci_projects_project_training_jobs_info": "Détails",
   "pci_projects_project_training_jobs_kill": "Arrêter",
   "pci_projects_project_training_jobs_price": "Prix",
+  "pci_projects_project_training_jobs_resubmit": "Relancer",
   "pci_projects_project_training_jobs_price_estimate": "Estimation sur le temps d'éxecution du job"
 }
