--- a/packages/manager/modules/pci/src/projects/project/training/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/training/translations/Messages_pt_PT.json
@@ -30,6 +30,7 @@
   "pci_projects_project_training_jobs_info": "Detalhes",
   "pci_projects_project_training_jobs_kill": "Parar",
   "pci_projects_project_training_jobs_price": "Preço",
+  "pci_projects_project_training_jobs_resubmit": "Relançar",
   "pci_projects_project_training_jobs_price_estimate": "Estimativa do tempo de execução do job",
   "pci_projects_project_training_jobs_state_TIMEOUT": "Timeout",
   "pci_projects_project_training_discord": "Comunidade OVHcloud AI em Discord"
