--- a/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_fr_FR.json
@@ -519,6 +519,8 @@
   "hosting_tab_DOMAINS_configuration_add_loading_error_configuration": "Une erreur est survenue lors du chargement des informations (l'état de votre configuration est en erreur).",
   "hosting_tab_DOMAINS_configuration_add_step1_title": "Vous allez ajouter un domaine sur votre hébergement mutualisé <strong class=\"font-italic\">{{t0}}</strong>",
   "hosting_tab_DOMAINS_configuration_add_step1_no_db_left": "Vous ne pouvez pas attacher plus de domaines à votre Hébergement Mutualisé",
+  "hosting_tab_DOMAINS_configuration_add_step1_only_one_db_and_no_left": "Votre offre actuelle vous permet d'installer un seul site. Pour bénéficier d'un site supplémentaire, choisissez une de nos offres supérieures.",
+  "hosting_tab_DOMAINS_configuration_add_buttom_update_offer": "Changer d'offre",
   "hosting_tab_DOMAINS_configuration_add_step1_ovh_search_placeholder": "Rechercher un domaine",
   "hosting_tab_DOMAINS_configuration_add_step1_ovh_search_no_result_found": "Aucun résultat",
   "hosting_tab_DOMAINS_configuration_add_step1_ovh": "Ajouter un domaine enregistré chez OVH",
