--- a/packages/manager/modules/pci/src/projects/project/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/translations/Messages_de_DE.json
@@ -34,5 +34,7 @@
   "pci_projects_project_community_roadmap_term": "Roadmap",
   "pci_projects_project_community_roadmap_description": "Entdecken und teilnehmen",
   "pci_projects_project_community_discord_term": "Community",
-  "pci_projects_project_community_discord_description": "Reden Sie mit auf Discord"
+  "pci_projects_project_community_discord_description": "Reden Sie mit auf Discord",
+  "pci_projects_project_documentation_block_storage_term": "Block Storage",
+  "pci_projects_project_documentation_block_storage_description": "Externes Speichermedium erstellen"
 }
