--- a/packages/manager/modules/pci/src/projects/project/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/translations/Messages_en_GB.json
@@ -34,5 +34,7 @@
   "pci_projects_project_community_roadmap_term": "Roadmap",
   "pci_projects_project_community_roadmap_description": "Discover and participate",
   "pci_projects_project_community_discord_term": "Community",
-  "pci_projects_project_community_discord_description": "Talk on Discord"
+  "pci_projects_project_community_discord_description": "Talk on Discord",
+  "pci_projects_project_documentation_block_storage_term": "Block Storage",
+  "pci_projects_project_documentation_block_storage_description": "Create an external storage device"
 }
