--- a/packages/manager/modules/pci/src/projects/project/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/translations/Messages_pt_PT.json
@@ -34,5 +34,7 @@
   "pci_projects_project_community_roadmap_term": "Roadmap",
   "pci_projects_project_community_roadmap_description": "Descubra e participe",
   "pci_projects_project_community_discord_term": "Comunidade",
-  "pci_projects_project_community_discord_description": "Discuta no Discord"
+  "pci_projects_project_community_discord_description": "Discuta no Discord",
+  "pci_projects_project_documentation_block_storage_term": "Block Storage",
+  "pci_projects_project_documentation_block_storage_description": "Criar um dispositivo de armazenamento externo"
 }
