--- a/packages/manager/apps/dedicated/client/app/account/identity-documents/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/dedicated/client/app/account/identity-documents/translations/Messages_fr_FR.json
@@ -5,7 +5,7 @@
   "user_account_identity_documents_list_for_particular": "Vous êtes un particulier, les documents obligatoires à fournir sont",
   "user_account_identity_documents_list_for_enterprise": "Vous êtes une entreprise, les documents obligatoires à fournir sont",
   "user_account_identity_documents_list_for_association": "Vous êtes une association, les documents obligatoires à fournir sont",
-  "user_account_identity_documents_list_for_institution": "Vous êtes une association, les documents obligatoires à fournir sont",
+  "user_account_identity_documents_list_for_institution": "Vous êtes une administration, les documents obligatoires à fournir sont",
   "user_account_identity_documents_list_for_others": "Voici les documents obligatoires à fournir",
   "user_account_identity_documents_list_doc1": "Carte d'identité ou passeport (ou permis de conduire, carte électorale, preuve de possession d'un nombre Aadhaar)",
   "user_account_identity_documents_list_doc2": "Justificatif de domicile",
