feat(iam): group improvements
 * MANAGER-11366
 * Show groups even when federation is not active

Signed-off-by: Vincent Cassé <vincent.casse@corp.ovh.com>

--- a/packages/manager/apps/dedicated/client/app/account/user/users/translations/Messages_en_GB.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/users/translations/Messages_en_GB.json
@@ -18,9 +18,10 @@
   "user_users_status_DISABLED": "Disabled",
   "user_users_error": "An error has occurred:",
   "user_users_role": "Role",
-  "user_roles_admin": "Administrator",
-  "user_roles_regular": "User",
-  "user_roles_unprivileged": "None",
+  "user_roles_admin": "Full Admin",
+  "user_roles_regular": "Restricted Admin",
+  "user_roles_unprivileged": "Read-Only",
+  "user_roles_none": "None",
   "user_users_disable": "Disable user",
   "user_users_delete_modal_step1_question": "Are you sure you want to delete the user <strong>{{login}}</strong>?",
   "user_users_disable_modal_step1_question": "Are you sure you want to disable the user <strong>{{login}}</strong>?",
