feat(iam): explicit choice of group instead of role
As policies allow user to select a custom group,
we need to add group in the form of users.

As "role" was a shortcut to the three default groups,
 we remove the shortcut and explicit the list of groups

Signed-off-by: Vincent Cassé <vincent.casse@corp.ovh.com>

--- a/packages/manager/apps/dedicated/client/app/account/user/users/translations/Messages_fr_CA.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/users/translations/Messages_fr_CA.json
@@ -19,9 +19,8 @@
   "user_users_error": "Une erreur est survenue :",
   "user_users_role": "Privilège",
   "user_roles_admin": "Administrateur",
-  "user_roles_regular": "Administrateur restreint",
-  "user_roles_unprivileged": "Lecture seule",
-  "user_roles_none": "Aucun",
+  "user_roles_regular": "Utilisateur",
+  "user_roles_unprivileged": "Aucun",
   "user_users_disable": "Désactiver l'utilisateur",
   "user_users_delete_modal_step1_question": "Êtes-vous sur de vouloir supprimer l'utilisateur <strong>{{login}}</strong> ?",
   "user_users_disable_modal_step1_question": "Êtes-vous sur de vouloir désactiver l'utilisateur <strong>{{login}}</strong> ?",
