--- a/packages/manager/apps/dedicated/client/app/account/user/users/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/users/translations/Messages_fr_FR.json
@@ -22,6 +22,7 @@
   "user_roles_regular": "Administrateur restreint",
   "user_roles_unprivileged": "Lecture seule",
   "user_roles_none": "Aucun",
+  "user_users_group": "Groupe",
   "user_users_disable": "Désactiver l'utilisateur",
   "user_users_delete_modal_step1_question": "Êtes-vous sur de vouloir supprimer l'utilisateur <strong>{{login}}</strong> ?",
   "user_users_disable_modal_step1_question": "Êtes-vous sur de vouloir désactiver l'utilisateur <strong>{{login}}</strong> ?",
