fix(web.hosting): add banner quota in hosting database section
ref: MANAGER-10999

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_fr_FR.json
@@ -163,11 +163,8 @@
   "hosting_dashboard_service_web_info_other": "sur {{t0}} recommandés",
   "hosting_dashboard_service_renew": "Renouveler",
   "hosting_dashboard_service_change_offer": "Changer d'offre",
-  "hosting_dashboard_service_change_offer_explanation": "Votre offre actuelle ne vous permet pas de créer des bases de données. Afin de pouvoir créer des bases de données, vous pouvez basculer sur un hébergement payant. C'est rapide et sans coupures. Nos offres vous permettrons d'obtenir :",
+  "hosting_dashboard_service_change_offer_explanation": "Votre offre actuelle ne vous permet pas de créer des bases de données. Afin de pouvoir créer des bases de données, vous pouvez basculer sur un hébergement payant. C'est rapide et sans coupures.",
   "hosting_dashboard_service_change_offer_explanation_only_one": "Vous disposez d'une seule base de données avec votre offre actuelle. Pour bénéficier de bases de données supplémentaires, choisissez une de nos offres supérieures.",
-  "hosting_dashboard_service_change_offer_explanation_ftp": "Un FTP d'au moins 1 Go",
-  "hosting_dashboard_service_change_offer_explanation_mail": "Un minimum de 2 adresses e-mail de 5 Go",
-  "hosting_dashboard_service_change_offer_explanation_db": "Une base de données commençant à 100 Mo",
   "hosting_dashboard_service_change_cdn": "Changer de CDN",
   "hosting_dashboard_service_change_cdn_version": "Changer d'offre",
   "hosting_dashboard_service_order_ssl": "Commander un certificat SSL",
@@ -366,11 +363,6 @@
   "hosting_tab_DATABASES_configuration_check_quota_success": "Le calcul du quota est en cours pour la base de données suivante: {{t0}}",
   "hosting_tab_DATABASES_configuration_check_quota_fail": "Une erreur est survenue lors du calcul de quota de votre base de données.",
   "hosting_tab_DATABASES_configuration_check_quota_calculating": "Calcul en cours...",
-  "hosting_tab_DATABASES_configuration_quota_info_lead": "Informations importantes sur les quotas",
-  "hosting_tab_DATABASES_configuration_quota_info_calculation_period": "Ces informations sont rafraîchies automatiquement toutes les 24h.",
-  "hosting_tab_DATABASES_configuration_quota_info_manual_calculation": "Vous pouvez également lancer un rafraîchissement manuel sur une table avec",
-  "hosting_tab_DATABASES_configuration_quota_warning_message": "Si vous dépassez l'espace de stockage recommandé, vos droits seront limités à un accès en lecture seule.",
-  "hosting_tab_DATABASES_configuration_quota_warning_resolution": "Pour éviter cette limitation, nous vous invitons à effectuer une purge de votre base de données et recalculer vos quotas afin de repasser en dessous de la taille recommandée. Votre base de données sera déverrouillée automatiquement dans les minutes suivantes.",
   "hosting_tab_databases_get_error": "Une erreur est survenue lors de la récupération de vos bases de données.",
   "hosting_tab_databases_dumps_error_fetch": "Une erreur est survenue lors de la récupération de vos sauvegardes.",
   "hosting_tab_DATABASES_configuration_create_title_button": "Créer une base de données",
